Added missing copyright headers
Signed-off-by: Sina Madani <sinadoom@googlemail.com>